# play_sudoku

./: Cargo.toml  README.txt
resource/: play_sudoku.desktop  sudoku.flc
src/: action.rs  board.rs  gfx.rs  gui.rs  main.rs  tile.rs
